--- a/package.json
+++ b/package.json
@@ -18,16 +18,21 @@
     "@hapi/joi": "^15.0.3",
     "async": "^3.0.1",
     "bcrypt": "^3.0.6",
+    "dotenv": "^8.0.0",
     "glob": "^7.1.4",
     "hapi-auth-basic": "^5.0.0",
     "hapi-auth-bearer-token": "^6.2.1",
     "hapi-authorization": "^4.0.0",
+    "hapi-swagger": "^10.0.2",
+    "inert": "^5.1.3",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "mongodb": "^3.2.7",
     "mongoose": "^5.5.12",
+    "nodemailer": "^6.2.1",
     "ramda": "^0.26.1",
-    "validator": "^11.0.0"
+    "validator": "^11.0.0",
+    "vision": "^5.4.4"
   },
   "devDependencies": {
     "jest": "^24.8.0",
