--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hapi-authorization": "^4.0.0",
     "hapi-swagger": "^10.0.2",
     "inert": "^5.1.3",
+    "joi-objectid": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "mongodb": "^3.2.7",
