--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@hapi/basic": "^5.1.0",
     "@hapi/boom": "^7.4.2",
     "@hapi/cookie": "^10.1.0",
-    "@hapi/hapi": "^18.3.1",
     "@hapi/joi": "^15.0.3",
     "async": "^3.0.1",
     "bcrypt": "^3.0.6",
@@ -31,11 +30,12 @@
     "mongodb": "^3.2.7",
     "mongoose": "^5.5.12",
     "nodemailer": "^6.2.1",
-    "ramda": "^0.26.1",
     "validator": "^11.0.0",
-    "vision": "^5.4.4"
+    "vision": "^5.4.4",
+    "xoauth2": "^1.2.0"
   },
   "devDependencies": {
+    "@hapi/hapi": "^18.3.1",
     "jest": "^24.8.0",
     "nodemon": "^1.19.1"
   }
