--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "jest",
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "testcoverage": "jest --coverage"
   },
   "author": "",
@@ -14,6 +14,7 @@
     "@hapi/basic": "^5.1.0",
     "@hapi/boom": "^7.4.2",
     "@hapi/cookie": "^10.1.0",
+    "@hapi/hapi": "^18.3.1",
     "@hapi/joi": "^15.0.3",
     "async": "^3.0.1",
     "bcrypt": "^3.0.6",
@@ -35,7 +36,6 @@
     "xoauth2": "^1.2.0"
   },
   "devDependencies": {
-    "@hapi/hapi": "^18.3.1",
     "jest": "^24.8.0",
     "nodemon": "^1.19.1"
   }
