--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
-CLOUDKARAFKA_BROKERS=velomobile-01.srvs.cloudkafka.com:9094,velomobile-02.srvs.cloudkafka.com:9094,velomobile-03.srvs.cloudkafka.com:9094
-CLOUDKARAFKA_USERNAME=jatj05y7
-CLOUDKARAFKA_PASSWORD=bqopKm6CeLX7kW4yOfuCq6W09dV0ESyg
-CLOUDKARAFKA_TOPIC_PREFIX=jatj05y7-
+CLOUDKARAFKA_BROKERS=omnibus-01.srvs.cloudkafka.com:9094,omnibus-02.srvs.cloudkafka.com:9094,omnibus-03.srvs.cloudkafka.com:9094
+CLOUDKARAFKA_USERNAME=635ykgf9
+CLOUDKARAFKA_PASSWORD=Dgr86CVTlhwoYWmDztdClKfABHZqHpzf
+CLOUDKARAFKA_TOPIC_PREFIX=635ykgf9-
+
+
 PORT=6969
 NODE_TLS_REJECT_UNAUTHORIZED='0'
 
