--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jwt-decode": "^2.2.0",
     "mongodb": "^3.2.7",
     "mongoose": "^5.5.12",
+    "node-rdkafka": "2.7.0",
     "nodemailer": "^6.2.1",
     "validator": "^11.0.0",
     "vision": "^5.4.4",
